# applaud

./: .gitignore  LICENSE  README.md  pyproject.toml
applaud/: __init__.py  connection.py  fields.py
applaud/endpoints/: __init__.py  age_rating_declarations.py  app_categories.py  app_clip_advanced_experience_images.py  app_clip_advanced_experiences.py  app_clip_app_store_review_details.py  app_clip_default_experience_localizations.py  app_clip_default_experiences.py  app_clip_header_images.py  app_clips.py  app_encryption_declarations.py  app_info_localizations.py  app_infos.py  app_pre_orders.py  app_preview_sets.py  app_previews.py  app_price_points.py  app_price_tiers.py  app_prices.py  app_screenshot_sets.py  app_screenshots.py  app_store_review_attachments.py  app_store_review_details.py  app_store_version_localizations.py  app_store_version_phased_releases.py  app_store_version_release_requests.py  app_store_version_submissions.py  app_store_versions.py  apps.py  base.py  beta_app_clip_invocation_localizations.py  beta_app_clip_invocations.py  beta_app_localizations.py  beta_app_review_details.py  beta_app_review_submissions.py  beta_build_localizations.py  beta_groups.py  beta_license_agreements.py  beta_tester_invitations.py  beta_testers.py  (+35 more)
applaud/schemas/: enums.py  models.py  requests.py  responses.py
examples/: export_finance_reports.py  export_sales_reports.py  simple_example.py
examples/UploadingAppPreviews/: README.md  credentials.toml.template  pyproject.toml  upload-preview.py
