[tool.poetry]
name = "applaud"
version = "0.1.0"
description = "The Python SDK to work with the App Store Connect API from Apple."
authors = ["Yang.Y <yang@yangyubo.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
authlib = "^0.15.5"
pydantic = "^1.9.0"
requests = "^2.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
