[tool.poetry]
name = "uploadingapppreviews"
version = "0.9.1"
description = "Uploading App Previews Example"
authors = ["Yang.Y <yang@yangyubo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
applaud = { path = "../../", develop = true }
tomlkit = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
